# personal-manager-02

./: .gitignore  404.html  Dockerfile  README.md  conftest.py  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.VSCodeCounter/2025-09-03_20-51-21/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
api/: __init__.py  app.py  auth_router.py  coordination_router.py  index.html  mail_app.py  main.py  project_router.py  schedule_router.py  schedule_router.py.backup  tasklist_router.py
api/commandline/: coordination_model.py  discussion_model.py  main_model.py  organization_model.py  project_model.py  tasklist_model.py
api/config/: cache.py  fetchMongo.py  map_services.py  s3.py  strict_pyenv.py  uniformInterface.py
api/frontend_routing/: app.py  auth_router.py  coordination_router.py  organization_router.py  project_router.py  tasklist_router.py
containers/: api.Dockerfile  docker-compose.yaml  ios.Dockerfile
docs/: api.md  index.md  tutorial.md
ios/: OAUTH_IMPLEMENTATION.md  Package.swift
logs/: events.out.tfevents.1756608564.Jaceys-MacBook-Air.local.30154.0
requirements/: api.txt  training.txt
site/: 404.html  index.html  sitemap.xml
src/: AttentionMech.py  DataProcessing.py  LayerSetup2.py  ModelSetup2.py  TimesDates.py  TrainingSetup.py  datetimes.ipynb  decoder.py  fetchMongo.py  handleDateTimes.py  structure_model_output.py  training.ipynb
train/: TrainingInit.py  Training_it_2.py
tutorial/: index.html
website/: README.md  package-lock.json  package.json
(+149 files in other folders)
